@@ -1,3 +1,12 @@
+2005-12-21  Adele Peterson  <adele@apple.com>
+
+        Reviewed by Tim Hatcher.
+
+        Fix for <rdar://problem/4387433> Seed: Radio buttons behave incorrectly in Gmail settings
+
+        * khtml/html/html_formimpl.cpp:
+        (DOM::HTMLFormElementImpl::registerFormElement): If this form element is already checked in the default form, remove it from m_selectedRadioButtons and add it for the new form.
+
 === WebCore-417.16 ===
 
 2005-12-20  Adele Peterson  <adele@apple.com>
